# DSaver

./: .gitignore  Cargo.toml  README.md  open-file.sh  run-appimage.sh  todo.txt
.github/workflows/: publish.yml  rust-clippy.yml
core/: Cargo.toml
core/src/: error_reporter.rs  lib.rs  link.rs  prelude.rs
frontend/: Cargo.toml  index.html
frontend/assets/lib-styles/: forms.scss  popup.scss
frontend/assets/scripts/: communicator.js  utils.js
frontend/assets/styles/: create_links.scss  display_links.scss  edit_links.scss  main.scss  sidebar.scss
frontend/src/: lib.rs  main.rs
frontend/src/components/: create_link.rs  edit_link.rs  filter.rs  tags.rs
frontend/src/lib_components/: mod.rs  open.rs
frontend/src/lib_components/input/: checkbox.rs  mod.rs
frontend/src/lib_components/select/: boxx.rs  mod.rs
link-types/: Cargo.toml
link-types/src/: browser.rs  lib.rs  link.rs
project-types/: Cargo.toml
project-types/src/: browser.rs  error_reporter.rs  lib.rs  link.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: generate.rs  mod.rs  open_browser.rs  validate_link.rs
src-yew/: Cargo.toml  index.html
src-yew/assets/lib-styles/: forms.scss
src-yew/assets/scripts/: communicator.js  formStyle.js  main.js  quick.js  utils.js
src-yew/assets/styles/: display_error.scss  display_links.scss  forms.scss  main.scss  popup.scss  sidebar.scss
src-yew/src/: lib.rs  main.rs
src-yew/src/components/: app.rs  browsers.rs  create_link.rs  display_error.rs  display_links.rs  edit_link.rs  filter.rs  mod.rs  show_links.rs  sidebar.rs  tags.rs
src-yew/src/hooks/: mod.rs  use_input.rs
src-yew/src/lib_components/: form.rs  input.rs  mod.rs  open.rs  popup.rs  select.rs
src-yew/src/lib_components/input/: checkbox.rs  input_div.rs  input_tags.rs  input_wrapper.rs  label.rs  mod.rs
src-yew/src/lib_components/select/: boxx.rs  mod.rs  select_label.rs
