[package]
name = "project-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.1.2", features = ["serde", "v4"]}
js-sys = {version = "0.3.59", optional = true}

[features]
wasm = ["js-sys"]