[package]
name = "dsaver-project-types"
version = "0.1.0"
edition = "2021"
description = "Common structs and enums for this project"
authors = ["KR Shanto <khalilorrahman2005@gmail.com>"]
repository = "https://github.com/KRShanto/DSaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.1.2", features = ["serde", "v4"]}
js-sys = {version = "0.3.59", optional = true}
rand = "0.8.5"
itertools = "0.10"

[features]
wasm = ["js-sys"]
