[package]
name = "dsaver"
version = "0.1.0"
description = "A data saving app"
authors = ["KR Shanto <khalilorrahman2005@gmail.com>"]
repository = "https://github.com/KRShanto/DSaver"
default-run = "dsaver"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "os-all", "path-all"] }
webpage = "1.4"
dsaver-project-types = {path="../project-types"}
rand = "0.8"
uuid = {version = "1.2.1", features = ["v4"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
