[package]
name = "src-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.59"
serde = "1.0.143"
serde_json = "1.0.83"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
web-sys = "0.3.59"
weblog = "0.3.0"
webru = "0.4.0"
yew = "0.19.3"
link-types = {path = "../link-types"}