[package]
name = "dsaver-frontend"
version = "0.1.0"
edition = "2021"
description = "A data saving app | frontend"
authors = ["KR Shanto <khalilorrahman2005@gmail.com>"]
repository = "https://github.com/KRShanto/DSaver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
weblog = "0.3"
webru = { git="https://github.com/KRShanto/webru" }
yew = "0.19"
dsaver-project-types = {path = "../project-types", features = ["wasm"]}
uuid = {version ="1.1.2", features=["v4", "js", "serde"]}
itertools = "0.10"
derive_more = "0.99"